# normalization

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml
docs/: contributing-guide.md  steps.md
normalization/constants/: protectors.py
normalization/languages/: __init__.py  registry.py
normalization/languages/base/: language_config.py  language_operator.py
normalization/languages/default/: operators.py
normalization/languages/english/: number_normalizer.py  operators.py
normalization/languages/french/: operators.py
normalization/pipeline/: base.py  loader.py  replacer.py
normalization/presets/: gladia-3.yaml
normalization/steps/: __init__.py  registry.py
normalization/steps/text/: __init__.py  apply_sentence_level_replacements.py  casefold_text.py  convert_comparison_operators_to_words.py  convert_decimal_periods_to_decimal_word.py  convert_degree_symbols_to_words.py  convert_digit_word_sequences_to_digits.py  convert_dots_to_words_in_technical_contexts.py  convert_oclock_to_numeric_time.py  convert_roman_numerals_to_digits.py  convert_word_based_time_patterns.py  expand_alphanumeric_codes.py  expand_contractions.py  expand_written_numbers_to_digits.py  expand_www_abbreviation.py  fix_ampm_letter_spacing.py  fix_dot_adjacent_number_words.py  fix_one_word_in_numeric_contexts.py  fix_version_number_v_prefix.py  format_time_patterns_with_ampm.py  normalize_numeric_time_formats.py  normalize_punctuation_between_number_words.py  placeholders.py  protect_plus_word_before_digit_words.py  remove_acronym_periods.py  remove_diacritics.py  remove_filler_words.py  remove_hash_before_numbers.py  remove_non_numeric_trailing_dots.py  remove_spaces_between_adjacent_digits.py  remove_standalone_currency_symbols.py  remove_symbols.py  remove_thousand_separators.py  remove_trailing_apostrophe_space.py  remove_trailing_dot_word_from_emails.py  remove_trailing_period.py  remove_zero_minutes_from_time.py  replace_currency.py
normalization/steps/word/: apply_word_replacements.py
scripts/: generate_step_docs.py
tests/e2e/: default_pipeline_test.py  latency_test.py  normalization_test.py
tests/e2e/files/: gladia-3.csv
tests/unit/languages/: english_registry_test.py  (+2 more)
(+9 files in other folders)
